objects/Release_Role__c.object
<CustomObject>
    <fields>
        <fullName>Accountable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateAvoid__c</fullName>
        <label>DuplicateAvoid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Independent_Reviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offering_Release__c</fullName>
        <label>Project ID</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Release_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <formula>Offering_Release__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process Role ID</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Release_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Role_ID__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Role Name</label>
        <type>Text</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>